<resources>
    <string name="app_name">MyTripNotes</string>
    <string name="cuaca_lokal">Cuaca Lokal</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="tampil_kota">Jakarta</string>
    <string name="tampil_tanggal">3 Februari - 6 Februari</string>
    <string name="tampil_keadaan">Hujan</string>
    <string name="rekomendasi">REKOMENDASI</string>
    <string name="teks_rinjani">Pulau Lombok di Nusa Tenggara Barat tidak hanya memiliki keindahan pantai eksotis yang memukau.
        Di sini juga terdapat sebuah gunung yang sudah tersohor keindahannya,
        terutama dikalangan para pendaki gunung. Gunung tersebut adalah Gunung Rinjani.
        Gunung Rinjani disebut-sebut sebagai tempat wisata trekking terbaik di Asia Tenggara.
        Dengan ketinggian 3.726 meter,gunung terindah di Indonesia ini juga berhasil menjadi gunung
        ketiga tertinggi di Indonesia. Gunung Rinjani menawarkan beragam pemandangan alam yang menakjubkan,
        mulai dari padang savana yang ditumbuhi bunga edelweiss, Danau Segara Anak,
        sampai pemandangan matahari terbit yang cantik dan tiada duanya.
        Perkiraan waktu yang Anda butuhkan untuk mendaki gunung ini adalah antara 7 sampai 10 jam,
        oleh karena itu Anda harus menyiapkan kondisi badan yang prima sebelum berangkat.
    </string>
    <string name="custom_aktivitas">Custom Aktivitas</string>
    <string name="submit">Submit</string>
    <string name="nama_aktivitas">Nama Aktivitas</string>
    <string name="skip_halaman_ini">Skip halaman ini</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrasi">registrasi</string>
    <string name="nama_activitas">Nama activitas</string>
    <string name="snorkeling">10 Tips Buat Kamu yang Baru Ingin Mencoba Snorkeling di Laut. Nggak Serem Kok!</string>
    <string name="tekssnorkeling">
        Sebagai negara negara kepulauan, Indonesia punya potensi wisata bahari yang luar biasa. Maka, gak heran jika beberapa kawasan terumbu karang paling kaya di dunia ada di Indonesia. Sebut saja Taman Nasional Pulau Komodo di Nusa Tenggara Timur, Bunaken di Sulawesi Utara, serta Raja Ampat di Papua. \n
        Sebagai orang Indonesia yang bangga dengan negerinya, rasanya sayang kalau nggak pernah menjamahi salah satu bagian terindah negeri ini yakni bawah laut. Jika menurutmu menyelam itu nggak terjangkau karena lisensi dan peralatannya yang mahal, ada cara lain yang bisa kamu jajal dan tentunya lebih sederhana, snorkeling namanya. Berbeda dari menyelam, snorkeling cuma mengambang di permukaan laut namun bisa melihat keindahan bawah laut yang masih dangkal. \n
        Hipwee Travel bagikan tips buat kamu yang ingin mencoba snorkeling di lautan. Nggak serem kok, tenang aja. \n
    </string>
    <string name="tipssnorkeling">
        1. Walau terlihat sederhana, keamanan tetap yang utama. Karena itu sebelum terjun kamu perlu kenal dulu apa itu snorkeling dan apa aja peralatannya \n
            Snorkeling merupakan kegiatan berenang dan menyelam menggunakan masker selam dan snorkel, serta fin atau sepatu katak untuk membantu daya dorongmu di bawah laut. Snorkeling ini umumnya dilakukan di air yang tenang atau berarus lambat. Tujuannya, ya buat menikmati keindahan pemandangan bawah air, dong. Kegiatan ini sangat populer dan biasa menjadi menu wajib saat kamu berlibur ke daerah kepulauan, misalnya Gili, Karimunjawa, ataupun Derawan. \n
            Nah, peralatan utama yang digunakan ada tiga, seperti yang udah disebutkan tadi. Yang pertama adalah masker selam yang menyegel mata dan hidung kamu dari air agar kamu bisa melihat dengan lebih baik di bawah air. Yang kedua, snorkel. Snorkel adalah tabung berbentuk ‘J’ yang membantu kamu bernapas lewat mulut. Umumnya, panjang snorkel adalah 30–40 cm. \n
            Yang ketiga, fin atau sepatu katak. Sepatu berbentuk sirip ini membantu manuver kamu selama berada di dalam air. Sebagai tambahan, kamu juga bisa menggunakan life vest atau jaket pelampung untuk menjaga tubuhmu tetap berada di permukaan air. \n
            \n
        2. Snorkeling adalah kabar gembira bagimu yang tidak bisa berenang. Lewat snorkeling kamu tetap bisa menikmati kecantikan alam bawah laut dengan tenang \n
            Berbeda dengan diving yang membutuhkan kemampuan berenang dan harus memiliki lisensi, bahkan yang gak bisa berenang pun bisa menikmati indahnya taman bawah laut di perairan dangkal dengan snorkeling. \n
            Memang sih, awalnya akan terasa menakutkan, apalagi membayangkan dunia yang gelap di bawah sana. Tapi, jangan gentar dulu. Yang penting, kamu mematuhi petunjuk dari pemandu dan tetap tenang selama berada di dalam air. Buat yang baru pertama kali nyemplung ke air, sangat disarankan untuk mengenakan jaket pelampung agar kamu tetap bisa mengapung di atas air. Selebihnya? Baca tips ini sampai selesai ya! \n
            \n
        3. Sebelum nyebur ke lautan, pastikan kamu mengecek semua peralatan. Kurang pasnya pemasangan alat bisa membuatmu tersedak dan kelilipan \n
            Di spot-spot snorkeling yang biasa dikunjungi, umumnya ada operator snorkel yang bisa memandu kamu sekaligus menyewakan peralatan snorkeling. Eh, tapi bukan berarti setelah menyewa peralatan lantas kamu bisa langsung terjun ke laut ya. Cek dulu peralatan yang kamu sewa dengan teliti. Pastikan  terasa pas saat dikenakan. \n
            Masker, misalnya, Cek apakah ada retak atau robek dan apakah seal-nya berfungsi dengan baik. Masker yang bagus akan terasa pas dan kedap udara saat dikenakan. Snorkel juga demikian, pastikan kamu bisa bernapas dengan leluasa dan gak ada bagian yang retak. Sebab kalau ada yang retak, air laut bisa merembes masuk. Terakhir, atur agar fin yang kamu kenakan itu lentur dan pas di kaki, gak terlalu longgar dan gak terlalu ketat.\n
            \n
        4. Bersihkan dulu alat snorkeling sewaan sebelum digunakan, biar gak terjadi ciuman tanpa kesepakatan dengan orang tak dikenal \n
            Namanya juga alat sewaan, pastinya udah digilir oleh sejumlah wisatawan yang bersnorkeling di sana. Memang sih, operator biasanya langsung membersihkan peralatan seusai digunakan. Tapi, gak ada salahnya kamu membersihkannya lagi biar yakin seratus persen. Cuci ulang peralatan sewaan yang baru kamu terima, kemudian keringkan lagi dengan kain bersih. \n
            \n
        5. Beres mengecek peralatan, kini saatnya kamu menyatukan diri dengannya sebelum mulai snorkeling betulan \n
            Oke, peralatan yang akan kamu gunakan udah selesai dicek, gak ada yang robek, retak, atau bocor. Kini saatnya kamu belajar membiasakan diri dengan peralatan ini. Pertama, pakailah masker dengan benar. Jangan sampai ada rambut atau benda lain di antara karet masker dan kulit wajahmu. Tekan masker sampai terasa rapat dan kedap udara. \n
            Setelah masker terpasang, coba pasang snorkel di mulut kamu. Teknik snorkeling itu intinya memindahkan cara bernapas dari hidung ke mulut lewat snorkel. Bernapaslah secara perlahan. Awalnya mungkin sulit, tapi lama-lama kamu bakal terbiasa, kok.\n
            \n
        6. Sebagai pemula, lebih baik cari tempat yang minim arusnya. Kamu bisa mengawali perjalanan snorkelingmu di Umbul Ponggok alih-alih langsung ke Tanjung Bira. \n
            Arus yang kadang mengombang-ambingkanmu di permukaan laut bisa bikin kamu capek, apalagi kalau kamu belum terbiasa dengan peralatan snorkeling yang kamu gunakan. Makanya, bila memungkinkan, coba dulu deh berlatih snorkeling di kolam alam seperti Umbul Ponggok, Klaten, alih-alih langsung menjajal laut yang berarus. \n
            Menjajal snorkeling di kolam yang minim arus melatihmu tetap tenang dan merasa nyaman di dalam air. Lagipula, pemandangan di dasar umbul ini gak kalah indah, lho. Jika gak memungkinkan mencari kolam yang terbuka untuk umum demi berlatih, coba dulu berlatih di air dangkal sebelum kamu mencoba di perairan yang berkarang sampai kamu terbiasa. \n
            \n
        7. Jangan jauh-jauh dari pemandu atau teman. Bukan karena kamu butuh kehangatan, tapi biar ada yang menjaga saat kamu butuh bantuan \n
            Pertama kalinya snorkeling, mungkin kamu bakal jadi seperti anak kecil yang baru pertama kali diajak ke kebun binatang. Rasa antusias karena bisa menikmati keindahan bawah laut bisa membuatmu kehilangan kendali hingga tanpa sadar berenang jauh dari teman-teman. \n
            Tak peduli sesemarak apapun perasaanmu, berusahalah tetap dekat dengan teman-teman satu grup dan tentunya pemandu. Tujuannya tak lain agar kalian bisa saling mengawasi jika terjadi sesuatu, misalnya kram atau kehabisan tenaga di tengah perjalanan, agar kamu bisa cepat mendapatkan bantuan. \n
            \n
        8. Meski pemandangannya luar biasa, tetaplah waspada. Ketidaktahuanmu bisa berujung petaka \n
            Selain berusaha tetap dekat dengan rekan yang lebih berpengalaman, tetap waspada dan jangan sampai terlena—soalnya ini laut, bukan gebetan kamu. Perhatikan gelombang dan arah arus. Beberapa makhluk laut juga mesti diwaspadai, seperti ubur-ubur dan bulu babi. Awasi karang-karang tajam biar gak melukai kaki. \n
            Lalu, jangan terlalu terpaku sama pemandangan di bawahmu, sesekali tengoklah ke permukaan, takutnya ada perahu yang gak sengaja melintas. Selama kamu waspada dan gak jauh-jauh dari temanmu, keindahan taman bawah laut bisa kamu nikmati dengan aman. \n
            \n
        9. Apa yang terjadi kalau masker atau tabung snorkelmu tiba-tiba kemasukan air? Pelajari dulu teknik clearing berikut ini. \n
            Kadang, masker atau snorkelmu kemasukan air saat kamu lagi asyik-asyiknya berenang. Hal ini bisa terjadi karena maskermu gak terlalu pas terpasang saat kamu mulai masuk ke perairan yang lebih dalam. Kalau ini terjadi, gak perlu panik. Dengan teknik clearing, kamu bisa membersihkan air yang masuk tanpa melepas masker dan snorkel. \n
            Untuk melakukan masker clearing alias membersihkan maskermu dari masuknya air caranya mudah. Tarik napas dalam-dalam melalui mulut, lalu hembuskan kuat-kuat dengan hidung sampai udara bercampur air keluar dari masker. Dengan prinsip yang sama, kamu juga bisa mengeluarkan air yang masuk ke tabung snorkelmu. Caranya, hembuskan udara kuat-kuat melalui mulut sampai airnya keluar.\n
            \n
        10. Panorama bawah laut memang luar biasa. Makanya, jaga keindahannya dengan menjadi snorkeler yang bertanggung jawab dalam tiap gerakannya \n
            Saat snorkeling, menjaga keselamatan diri memang penting. Tapi, menjaga kelestarian kehidupan terumbu karang dan makhluk-makhluk di dalamnya juga gak kalah penting. Jadilah snorkeler yang bertanggung jawab dengan gak sembarangan menyentuh terumbu karang dan hewan-hewan laut. Kamu juga pasti gak mau, ‘kan, tubuhmu diraba-raba orang gak dikenal? \n
            Saat berenang, perhatikan gerakan fin-mu, jangan sampai tak sengaja menendang terumbu karang yang bisa mengakibatkan kerusakan. Ingat, semua orang berhak menikmati keindahan terumbu karang. Kamu perlu lebih berhati-hati menjaga tiap langkah agar tidak mengakibatkan kerusakan. \n
    </string>
</resources>