<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".KustomActivitas">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/custom_aktivitas"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <EditText
            android:id="@+id/nama_activitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_activitas"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInput"
        android:layout_marginTop="100dp"
        android:background="#4F1F1E1E"
        android:onClick="submit"
        android:text="@string/submit" />

</RelativeLayout>