<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBE00"
    tools:context=".TempatYangDikunjungi"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteY="-6dp" />

    <TextView
        android:id="@+id/kota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView8"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tampil_kota"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kota"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tampil_tanggal"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cuaca"
        android:layout_width="136dp"
        android:layout_height="24dp"
        android:layout_below="@id/view1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cuaca_lokal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tanggal"
        android:background="#000" />

    <TextView
        android:id="@+id/keadaan_cuaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cuaca"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/tampil_keadaan"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/suhukota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="25"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="o" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/keadaan_cuaca"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#fff"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:padding="20dp" />

    <Button
        android:id="@+id/button_aktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:padding="20dp"
        android:text="@string/aktivitas"
        android:textColor="#fff" />


</RelativeLayout>