<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBE00"
    android:orientation="vertical"
    tools:context=".ActivityLogin">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteY="-6dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/days_one" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/open_sans_light"
        tools:layout_editor_absoluteY="178dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/open_sans_light"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="266dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="login"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFBE00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="388dp" />

    <Button
        android:id="@+id/registrasi"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="daftar"
        android:shadowRadius="5"
        android:text="@string/registrasi"
        android:textColor="#FFBE00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="450dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="skip"
        android:shadowRadius="5"
        android:text="@string/skip_halaman_ini"
        android:textColor="#FFBE00"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="509dp" />

</LinearLayout>