<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBE00"
    tools:context=".isisnorkeling">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="299dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/snorkeling"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:src="@drawable/snorkeling" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/tekssnorkeling"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tipssnorkeling"
                android:textColor="@android:color/black"
                android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>